v6.0/identity-verification/portal-guide/create-my-first-session.md
---
type: page
title: Create my first session
listed: true
slug: create-my-first-session
description: 
index_title: Create my first session
hidden: 
keywords: 
tags: 
---

Creating a session in the portal is straightforward as all of the session configuration has already been defined through the Hub.

For each session you will need to provide:

- A name
- An email address

{% badge type="info" text="Hint: " /%} This information will **NOT** be verified by Yoti and is used to help you search for the session later on.

- Press **Create session**

{% image url="https://res.cloudinary.com/developerhub/image/upload/v1603127429/71142/z5imgttqy9fj92bwtbl7.png" caption="Create a session" mode="600" height="1080" width="1466" %}
{% /image %}

- Enter the user's name and email address.

{% image url="https://res.cloudinary.com/developerhub/image/upload/v1603127519/71142/sel89qojj7dg2ykjtepo.png" caption="'Create a session &gt; Enter user details" mode="600" height="924" width="1452" %}
{% /image %}

When you have created a session, you will be see a button on a sessions details page to copy the session link. This link will need to be sent to your user.

{% image url="https://res.cloudinary.com/developerhub/image/upload/v1603127561/71142/og8redaadk4cfbnbn3s6.png" caption="Session has started" mode="600" height="1050" width="1472" %}
{% /image %}

This must be completed by the user. They will complete the end to end session, see below for example of the flow.

{% video %}
{% /video %}

Most of our clients create an email template provided with context on what the session is and how to complete this. If you need a hand on this please [auto$](/support/get-in-touch). 

---

## View the session

If you would like to see progress on your session you can search by email, name or select the session you are interested in:

{% image url="https://res.cloudinary.com/developerhub/image/upload/v1603127921/71142/xqmz37hgle0mxrvoprgm.png" caption="Session" mode="responsive" height="780" width="1476" %}
{% /image %}

Click the session you are interested in:

{% image url="https://res.cloudinary.com/developerhub/image/upload/v1603127757/71142/sbvdhoou7rzoxagmkp61.png" caption="Session &gt; Session details" mode="responsive" height="778" width="1480" %}
{% /image %}

You can then expand each of the checks to see the overall results. For example:

{% image url="https://res.cloudinary.com/developerhub/image/upload/v1603127826/71142/ufmbbfj5e8yv3nyx9ztf.png" caption="Session &gt; Session details &gt; Passport" mode="600" height="1292" width="1476" %}
{% /image %}

See the next section to understand these results.

---

## Video explainer

{% html %}
<div style="padding:50.78% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/647418608?h=01b7673f61&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Creating a session in the Yoti IDV Portal.mp4"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
{% /html %}